--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
       </div>
     </div>
     <a href= "HTML/subpage.html"> subpage</a>
-    <a href= "google/google.html"> google</a>
+    <a href= "projekty/vyhladavac/google.html"> google</a>
   </body>
 </html>
