--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel = "stylesheet" href = "css/mystyle.css">
+    <link rel = "stylesheet" href = "CSS/mystyle.css">
     <meta charset="utf-8">
     <title>o mne</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
