--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </ul>
         </div>
       </div>
-      <table>
+      <table class="center">
         <tr>
           <th>band</th>
           <th>movie </th>
