--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
       </div>
     </div>
-    <a href= "HTML/subpage.html"> subpage</a>
+    <a href= "HTML/Ecommerce-master/index.html"> stranka</a>
     <a href= "projekty/vyhladavac/google.html"> google</a>
   </body>
 </html>
