--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 		<img src="img/portfolio_pic1.jpg"  alt="Portfolio 1"> </div> 
 			<figcaption>		
 				<div>
-          <a href="FIC\appinfo.html">
+          <a href="FIC/appinfo.html">
 					<h2>App <span><br>info</span></h2>
 							<p>Get a brief introduction into the app and its functions</p>
 				  </a>
@@ -214,10 +214,11 @@
       <!--/Portfolio Item --> 
       
       <!-- Portfolio Item-->
-      <figure href="appinfo.html" style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four   wildlife isotope-item effect-oscar">
+      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four   wildlife isotope-item effect-oscar">
         <div class="portfolio_img"> <img src="img/portfolio_pic2.jpg" alt="Portfolio 1"> </div>
         	<figcaption>		
 				<div>
+          <a href="FIC/imgcomp.html">
 					<h2>Image<span><br>compression</span></h2>
 							<p>Oscar is a decent man. He used to clean porches with pleasure.</p>
 				  </a>
@@ -227,7 +228,7 @@
       <!--/Portfolio Item --> 
       
       <!-- Portfolio Item -->
-      <figure href="imgcomp.html" style="position: absolute; left: 0px; top: 0px; transform: translate3d(674px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  animals  isotope-item effect-oscar">
+      <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(674px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  animals  isotope-item effect-oscar">
         <div class="portfolio_img"> <img src="img/portfolio_pic3.jpg" alt="Portfolio 1"> </div>
        <figcaption>		
 				<div>
