--- a/FIC/v2.html
+++ b/FIC/v2.html
@@ -93,8 +93,9 @@
      </script>
 
      <!-- Add some HTML elements for displaying images -->
-     <img id="input" src="https://nick7294.github.io/FIC/imgcomp.html/image.jpg" alt="Input image" width="256" height="256">
-     <img id="output" src="" alt="Output image">
+     <imput >
+     <img id="input" src="https://www.startpage.com/av/proxy-image?piurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2Fd%2Fdf%2FFourier2_-_restoration1.jpg%2F1200px-Fourier2_-_restoration1.jpg&sp=1677501066Td57f358722b580f4715245e248c22665761c365d931a41c11624fcbaab81e769" alt="Input image" width="256" height="256">
+     <img id="output" alt="Output image">
 
      <!-- Add some HTML elements for controlling compression -->
      <label for="slider">Data:</label>
