--- a/FIC/v3.html
+++ b/FIC/v3.html
@@ -65,7 +65,15 @@ function draw() {
    // display original and compressed images side by side
    image(img, width /2 - img.width /2 , height /2 - img.height /2 );
    image(compressed,width /2 + img.width /2 , height /2 - img.height /2 );
+   
+   var compressionRatio = 0;
+var slider = document.getElementById("myRange");
+slider.addEventListener("input", function() {
+  compressionRatio = this.value;
+  console.log(compressionRatio);
 }
+
+});
 </script>
 </body>
 </html>
