--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <meta name="viewport" content="width=device-width, maximum-scale=1">
 <title>Amaze Photography Bootstrap HTML5 Template | Webthemez</title>
 <link rel="icon" href="favicon.png" type="image/png">
-<link href="FIC/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
-<link href="FIC/css/style.css" rel="stylesheet" type="text/css"> 
-<link href="FIC/css/font-awesome.css" rel="stylesheet" type="text/css"> 
-<link href="FIC/css/animate.css" rel="stylesheet" type="text/css">
+<link href="css/style.css" rel="stylesheet" type="text/css"> 
+<link href="css/font-awesome.css" rel="stylesheet" type="text/css"> 
+<link href="css/animate.css" rel="stylesheet" type="text/css">
 
  
 <!--[if lt IE 9]>
@@ -203,7 +203,7 @@
         <div class="portfolio_img"> 
 		<img src="img/portfolio_pic1.jpg"  alt="Portfolio 1"> </div> 
 			<figcaption>	
-        <a href="FIC/appinfo.html"></a>	
+        <a href="appinfo.html"></a>	
 				<div>
           
 					<h2>App <span><br>info</span></h2>
@@ -217,7 +217,7 @@
       <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four   wildlife isotope-item effect-oscar">
         <div class="portfolio_img"> <img src="img/portfolio_pic2.jpg" alt="Portfolio 1"> </div>
         	<figcaption>		
-            <a href="FIC/imgcomp.html"></a>	
+            <a href="imgcomp.html"></a>	
 				<div>
 					<h2>Image<span><br>compression</span></h2>
 							<p>Oscar is a decent man. He used to clean porches with pleasure.</p>
