--- a/SSIMcomp.html
+++ b/SSIMcomp.html
@@ -23,10 +23,10 @@
           <div id="main-nav" class="collapse navbar-collapse navStyle">
               <ul class="nav navbar-nav" id="mainNav">
                 <li class="active"><a href="index.html" class="scroll-link">home</a></li>
-                <li><a href="index.html#imgcompress" >About US</a></li>
-                <li><a href="index.html#imgcompress" class="scroll-link">My Skills</a></li>
-                <li><a href="index.html#SSIMcomp" class="scroll-link">Functions</a></li> 
-                <li><a href="index.html#comp" class="scroll-link">Contact</a></li>
+                <li><a href="index.html#aboutUs" class="scroll-link">About US</a></li>
+                <li><a href="index.html#service" class="scroll-link">App Functions</a></li>
+                <li><a href="index.html#Portfolio" class="scroll-link">Info</a></li> 
+                <li><a href="index.html#contact" class="scroll-link">Download</a></li>
               </ul>
         </div>
        </nav>
@@ -37,8 +37,8 @@
 <section id="introduction">
   <div class="htitle">
     <div class="headder">
-      <h1>Colourless images</h1>
-      <p>why do we use them?</p>
+      <h1>SSIM</h1>
+      <p>what does it do?</p>
       </div>
 
   </section>
@@ -156,9 +156,7 @@ p {
 <div class="cont">
  
 
-  <div class=“text-fld” style="font-size: 16px !important;">  <br>
-    <br>You may have noticed that the output images are colourless and wondered why.The app output images are colourless for two main reasons: ease of comparison and compression efficiency. By removing colour information from the images, the app makes it easier for users to compare different aspects of the images, such as shape, texture, contrast and brightness. Colour can sometimes distract or confuse users when they are trying to evaluate the quality or relevance of an image.
-    
+  <div class=“text-fld” style="font-size: 16px !important;">
   <br>
   <br>
   </div>
@@ -245,13 +243,13 @@ btn.onclick = function() {
 };
 </script> -->
   <section id="defcol"></section>
-    <div class="cont"><div class=“text-fld” style="font-size: 16px !important;">
-        Another reason why the app output images are colourless is because they can be compressed more without a significant decline in quality. Colour images have more data than greyscale images, which means they take up more space and bandwidth. By converting colour images to greyscale, the app reduces the file size and optimizes the loading speed of the images. The app uses intelligent compression algorithms that retain most of the image quality while drastically reducing image size     <br>
-      <br>
-      <br>
-      We are working on a colour option for users who prefer to see their images in full colour. However, the colourless option will still be on by default for the reasons stated above. We believe that the colourless option provides a better user experience by making it easier and faster to compare images. The app output images are colourless for your convenience.<br>
-      <br>
-      <br>
+    <div class="cont"><div class=“text-fld” style="font-size: 16px !important;">Fourier image compressor has a function that allows users to measure the structural similarity index (SSIM) between two images. The SSIM is a method for predicting the perceived quality of digital images and videos by taking texture into account. The SSIM function compares two images pixel by pixel and calculates a score between 0 and 1, where 1 means identical and 0 means completely different.
+        <br>
+        <br>
+        FIC’s function is based on a well-known Python library that implements the SSIM algorithm. The app allows users to adjust various parameters of the function, such as window size, gradient, data range, channel axis, multichannel and gaussian weights. This function is designed to provide users with a reliable and flexible way to compare image quality and similarity.
+        <br>
+        <br>
+       
   </section>
 
 
