--- a/appinfo.html
+++ b/appinfo.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
 <title>Amaze Photography Bootstrap HTML5 Template | Webthemez</title>
-<link rel="icon" href="favicon.png" type="image/png">
+<link rel="icon" href="img/favicon.png" type="image/png">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 <link href="css/style.css" rel="stylesheet" type="text/css"> 
@@ -23,7 +23,10 @@
           <div id="main-nav" class="collapse navbar-collapse navStyle">
               <ul class="nav navbar-nav" id="mainNav">
                 <li class="active"><a href="index.html" class="scroll-link">home</a></li>
-
+                <li><a href="index.html#aboutUs" class="scroll-link">About US</a></li>
+                <li><a href="index.html#service" class="scroll-link">App Functions</a></li>
+                <li><a href="index.html#Portfolio" class="scroll-link">Info</a></li> 
+                <li><a href="index.html#contact" class="scroll-link">Download</a></li>
               </ul>
         </div>
        </nav>
@@ -153,14 +156,15 @@ p {
 <div class="cont">
  
 
-  <div class=“text-fld” style="font-size: 16px !important;">The Fourier Image Compressor is an app that allows you to compress your images using the Fourier transform. The Fourier transform converts your image into a combination of waves with different frequencies and amplitudes. You can then adjust how many waves you want to retain and see how it affects your image size and quality. You can also view your image in the wave domain and compare it with other images. FIC is an app that helps you understand the principles of image compression and wave domain. Download FIC now and experience the power of the Fourier transform!
+  <div class=“text-fld” style="font-size: 16px !important;">  <br>
+    <br>The Fourier Image Compressor is an app that allows you to compress your images using the Fourier transform. The Fourier transform converts your image into a combination of waves with different frequencies and amplitudes. You can then adjust how many waves you want to retain and see how it affects your image size and quality. You can also view your image in the wave domain and compare it with other images. FIC is an app that helps you understand the principles of image compression and wave domain. Download FIC now and experience the power of the Fourier transform!
   </div>
   <br>
 </section>
 <section id="imgcompress">
 <!--   <button id="someBtnId">Show text</button> -->
 
-  
+<!--   
   <script>
   const btn = document.getElementById("someBtnId");
   const para_1 = document.getElementById("para_1");
@@ -175,7 +179,7 @@ p {
       para_1.style.display = "block";
     }
   });
-  </script>
+  </script> -->
 <br>
 <h2>Image compression</h2>
 <div class="cont"><div class=“text-fld” style="font-size: 16px !important;">Fourier Image Compressor is an app that lets you shrink your images by using a clever math trick called the Fourier transform. This trick changes your image into a bunch of waves with different colors and strengths. You can pick how many waves you want to keep by sliding a bar. The more waves you keep, the better your image looks and the bigger it is. The fewer waves you keep, the worse your image looks and the smaller it is. FIC then turns your image back to normal and lets you save or share it.</div></div>
@@ -256,11 +260,13 @@ btn.onclick = function() {
   <section id="SSIMcomp">
     <h2>Compare using SSIM</h2>
     <div class="cont"><div class=“text-fld” style="font-size: 16px !important;">Fourier Image Compressor also lets you compare your compressed images using a metric called SSIM (Structural Similarity Index Measure). SSIM is a way of measuring how similar two images are based on their structural information. Structural information refers to the patterns of pixels that form edges and shapes in your image. SSIM can help you evaluate how well your compression preserves the important details of your image and how close it is to the original image.
-      </div></div>
+      <br>
+    <br></div></div>
   </section>
   <section id="comp">
     <h2>View compressed</h2>
     <div class="cont"><div class=“text-fld” style="font-size: 16px !important;">See your image as waves with Fourier Image Compressor! This app shows you how your image looks in the wave domain. You can learn how the wave domain affects your image quality and size. You can also compare different images as waves and see how they have different wave patterns.
-      </div></div>
+      <br>
+      <br></div></div>
   </section>
 </html>
