--- a/imgcomp.html
+++ b/imgcomp.html
@@ -156,7 +156,9 @@ p {
 <div class="cont">
  
 
-  <div class=“text-fld” style="font-size: 16px !important;">The image compression function is a feature of our app that allows you to reduce the size of your images without losing much quality. It uses the Fourier transform, which is a mathematical technique that can convert an image into a sum of complex exponentials of varying magnitudes, frequencies, and phases. These components are also called frequency components, because they represent how much each frequency contributes to the image.
+  <div class=“text-fld” style="font-size: 16px !important;"><br>
+    <br>
+    The image compression function is a feature of our app that allows you to reduce the size of your images without losing much quality. It uses the Fourier transform, which is a mathematical technique that can convert an image into a sum of complex exponentials of varying magnitudes, frequencies, and phases. These components are also called frequency components, because they represent how much each frequency contributes to the image.
   <br>
   <br>
   </div>
@@ -165,7 +167,7 @@ p {
 <section id="imgcompress">
 <!--   <button id="someBtnId">Show text</button> -->
 
-  
+<!--   
   <script>
   const btn = document.getElementById("someBtnId");
   const para_1 = document.getElementById("para_1");
@@ -180,7 +182,7 @@ p {
       para_1.style.display = "block";
     }
   });
-  </script>
+  </script> -->
 <br>
 
 <div class="cont">
@@ -251,6 +253,7 @@ btn.onclick = function() {
       <br>
       <br>
       The image compression function currently works only for grayscale images. Grayscale images have only one color channel (intensity), so they are easier to process with Fourier transform than colorful images. Colorful images have three color channels (red, green, blue), so they require more computations and storage space with Fourier transform. However, we are working on adding an option for colorful images soon. Stay tuned for more updates!</div></div>
+<br>
 <br>
   </section>
 
