--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
 <title>Amaze Photography Bootstrap HTML5 Template | Webthemez</title>
-<link rel="icon" href="favicon.png" type="image/png">
+<link rel="icon" href="img/favicon.png" type="image/png">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 <link href="css/style.css" rel="stylesheet" type="text/css"> 
@@ -208,7 +208,7 @@
 				<div>
           
 					<h2>App <span><br>info</span></h2>
-							<p>Get a brief introduction into the app and its functions</p>
+							<p>Click to learn more</p>
 				</div>
 			</figcaption>
         </figure>
@@ -221,7 +221,7 @@
             <a href="imgcomp.html"></a>	
 				<div>
 					<h2>Image<span><br>compression</span></h2>
-							<p>Oscar is a decent man. He used to clean porches with pleasure.</p>
+							<p>Click to learn more</p>
 				  </a>
 				</div>
 			</figcaption>
@@ -232,9 +232,10 @@
       <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(674px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  animals  isotope-item effect-oscar">
         <div class="portfolio_img"> <img src="img/portfolio_pic.png" alt="Portfolio 1"> </div>
        <figcaption>		
+        <a href="defcol.html"></a>	
 				<div>
-					<h2>Default  <span><br>colouless</span></h2>
-							<p>Oscar is a decent man. He used to clean porches with pleasure.</p>
+					<h2>Default  <span><br>colorless</span></h2>
+							<p>Click to learn more</p>
 				  </a>
 				</div>
 			</figcaption>
@@ -245,9 +246,10 @@
       <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(1011px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four   wildlife  nature web isotope-item effect-oscar">
         <div class="portfolio_img"> <img src="img/portfolio_pic.png" alt="Portfolio 1"> </div>
          <figcaption>		
+          <a href="SSIMcomp.html"></a>	
 				<div>
 					<h2>SSIM<span><br>comparison</span></h2>
-							<p>Oscar is a decent man. He used to clean porches with pleasure.</p>
+							<p>Click to learn more</p>
 				  </a>
 				</div>
 			</figcaption>
@@ -258,9 +260,10 @@
       <figure style="position: absolute; left: 0px; top: 0px; transform: translate3d(0px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  wildlife isotope-item effect-oscar">
         <div class="portfolio_img"> <img src="img/portfolio_pic.png" alt="Portfolio 1"> </div>
        <figcaption>		
+        <a href="scomp.html"></a>
 				<div>
 					<h2>View <span><br>compressed</span></h2>
-							<p>Oscar is a decent man. He used to clean porches with pleasure.</p>
+							<p>Click to learn more</p>
 				  </a>
 				</div>
 			</figcaption>
