--- a/scomp.html
+++ b/scomp.html
@@ -37,8 +37,8 @@
 <section id="introduction">
   <div class="htitle">
     <div class="headder">
-      <h1>Colourless images</h1>
-      <p>why do we use them?</p>
+      <h1>Image compression</h1>
+      <p>how does it work?</p>
       </div>
 
   </section>
@@ -156,18 +156,16 @@ p {
 <div class="cont">
  
 
-  <div class=“text-fld” style="font-size: 16px !important;">  <br>
-    <br>You may have noticed that the output images are colourless and wondered why.The app output images are colourless for two main reasons: ease of comparison and compression efficiency. By removing colour information from the images, the app makes it easier for users to compare different aspects of the images, such as shape, texture, contrast and brightness. Colour can sometimes distract or confuse users when they are trying to evaluate the quality or relevance of an image.
+  <div class=“text-fld” style="font-size: 16px !important;"><br>
     
   <br>
-  <br>
   </div>
-  
+  <br>
 </section>
 <section id="imgcompress">
 <!--   <button id="someBtnId">Show text</button> -->
 
-  
+<!--   
   <script>
   const btn = document.getElementById("someBtnId");
   const para_1 = document.getElementById("para_1");
@@ -182,7 +180,7 @@ p {
       para_1.style.display = "block";
     }
   });
-  </script>
+  </script> -->
 <br>
 
 <div class="cont">
@@ -228,7 +226,7 @@ p {
 </style>
 
 <!-- Add some JavaScript for functionality -->
-<!-- <script>
+<script>
 // Get the button element
 var btn = document.querySelector(".dropbtn");
 
@@ -243,15 +241,15 @@ btn.onclick = function() {
         content.style.display = "none";
     }
 };
-</script> -->
+</script>
   <section id="defcol"></section>
-    <div class="cont"><div class=“text-fld” style="font-size: 16px !important;">
-        Another reason why the app output images are colourless is because they can be compressed more without a significant decline in quality. Colour images have more data than greyscale images, which means they take up more space and bandwidth. By converting colour images to greyscale, the app reduces the file size and optimizes the loading speed of the images. The app uses intelligent compression algorithms that retain most of the image quality while drastically reducing image size     <br>
-      <br>
-      <br>
-      We are working on a colour option for users who prefer to see their images in full colour. However, the colourless option will still be on by default for the reasons stated above. We believe that the colourless option provides a better user experience by making it easier and faster to compare images. The app output images are colourless for your convenience.<br>
-      <br>
-      <br>
+    <div class="cont"><div class=“text-fld” style="font-size: 16px !important;">Fourier image compressor has the view compressed function that allows users to see the intermediate stage of an image after it has been compressed using Fourier methods but before it has been decompressed. Fourier methods are techniques for compressing images based on transforming them into frequency domains using Discrete Fourier Transform (DFT) or Discrete Cosine Transform (DCT). The app’s function shows users how the image looks like after some of the smallest frequency coefficients have been discarded and not stored.
+        <br>
+        <br>
+        This function is useful for users who want to understand how Fourier methods work and how they affect image quality. It also allows users to compare the original image with the compressed and decompressed versions. The view compressed function is designed to provide users with a visual insight into Fourier compression and decompression.<br>
+
+<br>
+<br>
   </section>
 
 
