--- a/appinfo.html
+++ b/appinfo.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
-<title>Amaze Photography Bootstrap HTML5 Template | Webthemez</title>
+<title>Fourier image compressor website</title>
 <link rel="icon" href="img/favicon.png" type="image/png">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
