--- a/scomp.html
+++ b/scomp.html
@@ -37,8 +37,8 @@
 <section id="introduction">
   <div class="htitle">
     <div class="headder">
-      <h1>Image compression</h1>
-      <p>how does it work?</p>
+      <h1>View compressed</h1>
+      <p>what are you looking at?</p>
       </div>
 
   </section>
