--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <h2> Fourier transform <br/><strong>The Fascinatung algorithm</strong></h2>
               </div>
 			  
-		<img class="" src="img/slide1.jpg" alt=""></div>
+		<img class="" src="img/slide1.png" alt=""></div>
         <div class="item">
 		<div class="caption zoomIn wow animated"> 		 			 
               <h2>Explained<br/><strong>in a nice, simple way</strong></h2>
@@ -80,9 +80,9 @@
 
     <div class="inner_section">
  <div class="row">
-      <div class="col-md-6"> <img class="img-responsive" src="img/about11.png" align=""> </div>
+      <div class="col-md-6"> <img class="img-responsive" src="img/about001.png" align="center" style="scale: 80%; position: relative; top: -50px;"> </div>
       <div class="col-md-6">
-        <h3>Our Work</h3>
+        <h3><br><br>Our Work</h3>
         <p>We're students in Súkromná stredná odborná škola Ul. 29. augusta 4812, 058 01 Poprad, studying IT
         </p>
         <p>in the past few months, we worked on developing a working program for compressing and saving an image using the Fourier transform </p> 
@@ -299,7 +299,7 @@
                 <div class="button_wrapper">
                   <button class="btn btn-primary" onclick="window.location.href='https://github.com/nick7294/nick7294.github.io/tree/main/app'">github</button>
 
-                  <button class="btn btn-secondary" onclick="window.location.href='https://drive.google.com/file/d/1bO7xy0Fn3mzZ4RUQaMIjG1UasSMU5ARZ/view?usp=sharing'">exe app</button>
+                  <button class="btn btn-secondary" onclick="window.location.href='https://drive.google.com/file/d/1bO7xy0Fn3mzZ4RUQaMIjG1UasSMU5ARZ/view?usp=sharing'">.exe app</button>
                 </div>
               </div>
             </section>  
