small visual changes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="caption zoomIn wow animated"> 		 			 
               <h2>Explained<br/><strong>in a nice, simple way</strong></h2>
               </div>
-			  <img class="" src="img/slide2.jpg" alt=""></div>
+			  <img class="" src="img/simple-expl.png" alt=""></div>
         <div class="item">
 		<div class="caption zoomIn wow animated"> 		 			
               <h2>Application<br/><strong>for you to try out</strong></h2>
@@ -343,8 +343,10 @@
 
   </style>
   </div>
-  <div class="container">
+  <div style="background-color: black !important;color: #000;">
+  <div class="container" >
     <div class="footer_bottom"><span>Copyright © reserved,    Template by <a href="http://webthemez.com">WebThemez.com</a>. </span> </div>
+  </div>
   </div>
 </footer>
 
