more information added

--- a/imgcomp.html
+++ b/imgcomp.html
@@ -252,9 +252,16 @@ btn.onclick = function() {
       Our app lets you input how much you want to keep by entering a number between 0 and 100. This number represents the percentage of low-frequency components that you want to retain in your compressed image. The higher the number, the better the quality but also the larger the size. The lower the number, the worse the quality but also the smaller the size. You can experiment with different numbers and see how they affect your images.<br>
       <br>
       <br>
-      The image compression function currently works only for grayscale images. Grayscale images have only one color channel (intensity), so they are easier to process with Fourier transform than colorful images. Colorful images have three color channels (red, green, blue), so they require more computations and storage space with Fourier transform. However, we are working on adding an option for colorful images soon. Stay tuned for more updates!</div></div>
+      The image compression function currently works only for grayscale images. Grayscale images have only one color channel (intensity), so they are easier to process with Fourier transform than colorful images. Colorful images have three color channels (red, green, blue), so they require more computations and storage space with Fourier transform. However, we are working on adding an option for colorful images soon. Stay tuned for more updates!
 <br>
 <br>
+<br><div style="font-size: 20px !important; text-align: center;" >
+<a href="https://www.w3schools.com/html/default.asp" style="justify-content: center; color: #2fa762;">click here</a> for more information about the fourier transform itself
+</div>
+<br>
+<br>
+<br>
+</div>
   </section>
 
 
