--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
 <title>Fourier image compressor website</title>
-<link rel="icon" href="img/favicon.png" type="image/png">
+<link rel="icon" href="img/app-1.png" type="image/png">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 <link href="css/style.css" rel="stylesheet" type="text/css"> 
@@ -36,7 +36,7 @@
 		<img class="" src="img/slide1.png" alt=""></div>
         <div class="item">
 		<div class="caption zoomIn wow animated"> 		 			 
-              <h2>Explained<br/><strong>in a nice, simple way</strong></h2>
+              <h2>See your own images<br/><strong>compressed by the fourier </strong></h2>
               </div>
 			  <img class="" src="img/simple-expl.png" alt=""></div>
         <div class="item">
