--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<img class="" src="img/slide1.png" alt=""></div>
         <div class="item">
 		<div class="caption zoomIn wow animated"> 		 			 
-              <h2>See your own images<br/><strong>compressed by the fourier </strong></h2>
+              <h2>Explained<br/><strong>in a nice, simple way</strong></h2>
               </div>
 			  <img class="" src="img/simple-expl.png" alt=""></div>
         <div class="item">
