--- a/v3.html
+++ b/v3.html
@@ -1,4 +1,4 @@
-<!-- <html>
+<html>
 <head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
@@ -72,7 +72,7 @@ slider.addEventListener("input", function() {
   compressionRatio = this.value;
   console.log(compressionRatio);
 }
-,);
+,});
 </script>
 <section id="imgcompress">
   <button id="someBtnId">Show text</button>
@@ -80,6 +80,7 @@ slider.addEventListener("input", function() {
 <div ip="para_2" class="cont"><div class=“text-fld” style="font-size: 16px !important;">Fourier Image Compressor is an app that lets you shrink your images by using a clever math trick called the Fourier transform. This trick changes your image into a bunch of waves with different colors and strengths. You can pick how many waves you want to keep by sliding a bar. The more waves you keep, the better your image looks and the bigger it is. The fewer waves you keep, the worse your image looks and the smaller it is. FIC then turns your image back to normal and lets you save or share it.</div></div>
 
   
+  <script>
   const btn = document.getElementById("someBtnId");
   const para_1 = document.getElementById("para_1");
   const para_2 = document.getElementById("para_2");
@@ -92,7 +93,7 @@ slider.addEventListener("input", function() {
       para_2.style.display = "none";
       para_1.style.display = "block";
     }
-});
-  </script> -->
+  });
+  </script>
 </body>
 </html>
